--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>content website</title>
-	<link href="style.css" rel="stylesheet" type="text/css">
+	<link href="http://jsinitx4.github.io/content/style.css" rel="stylesheet" type="text/css">
 	<meta property="og:title" content="content website">
     <meta name="description" content="content website">
     <meta property="og:description" content="content website">
